--- a/index.yaml
+++ b/index.yaml
@@ -1,6 +1,6 @@
 items:
   [
-    compilers/arm-none-eabi-gcc/gcc-2017.6.0.json,
+    compilers/arm-none-eabi-gcc/gcc-6.3.1-2017q1.json,
     tools/nuvoton/cmsis-packs/cmsis-dfp-1.3.12.json,
     tools/nuvoton/openocd/openocd-1.2.22.json
   ]
@@ -43,7 +43,7 @@ indexes:
     keys:
       1.2.22: [ 2 ]
       1.3.12: [ 1 ]
-      2017.6.0: [ 0 ]
+      6.3.1-2017q1: [ 0 ]
   StringKey/summary:
     keys:
       Free and open on-chip debugging: [ 2 ]
