--- a/index.yaml
+++ b/index.yaml
@@ -1,6 +1,7 @@
 items:
   [
     compilers/arm-none-eabi-gcc/gcc-6.3.1-2017q1.json,
+    tools/ninja-build/ninja/ninja-1.11.1.json,
     tools/nuvoton/cmsis-packs/cmsis-dfp-1.3.12.json,
     tools/nuvoton/openocd/openocd-1.2.22.json
   ]
@@ -8,15 +9,18 @@ indexes:
   IdentityKey/id:
     keys:
       compilers/arm-none-eabi-gcc: [ 0 ]
-      tools/nuvoton/cmsis-packs: [ 1 ]
-      tools/nuvoton/openocd: [ 2 ]
+      tools/ninja-build/ninja: [ 1 ]
+      tools/nuvoton/cmsis-packs: [ 2 ]
+      tools/nuvoton/openocd: [ 3 ]
     words:
       arm: [ 0 ]
       arm-none: [ 0 ]
       arm-none-eabi: [ 0 ]
       arm-none-eabi-gcc: [ 0 ]
-      cmsis: [ 1 ]
-      cmsis-packs: [ 1 ]
+      build: [ 1 ]
+      build/ninja: [ 1 ]
+      cmsis: [ 2 ]
+      cmsis-packs: [ 2 ]
       compilers: [ 0 ]
       compilers/arm: [ 0 ]
       compilers/arm-none: [ 0 ]
@@ -25,40 +29,47 @@ indexes:
       eabi: [ 0 ]
       eabi-gcc: [ 0 ]
       gcc: [ 0 ]
+      ninja: [ 1 ]
+      ninja-build: [ 1 ]
+      ninja-build/ninja: [ 1 ]
       none: [ 0 ]
       none-eabi: [ 0 ]
       none-eabi-gcc: [ 0 ]
-      nuvoton: [ 1, 2 ]
-      nuvoton/cmsis: [ 1 ]
-      nuvoton/cmsis-packs: [ 1 ]
-      nuvoton/openocd: [ 2 ]
-      openocd: [ 2 ]
-      packs: [ 1 ]
-      tools: [ 1, 2 ]
-      tools/nuvoton: [ 1, 2 ]
-      tools/nuvoton/cmsis: [ 1 ]
-      tools/nuvoton/cmsis-packs: [ 1 ]
-      tools/nuvoton/openocd: [ 2 ]
+      nuvoton: [ 2, 3 ]
+      nuvoton/cmsis: [ 2 ]
+      nuvoton/cmsis-packs: [ 2 ]
+      nuvoton/openocd: [ 3 ]
+      openocd: [ 3 ]
+      packs: [ 2 ]
+      tools: [ 1, 2, 3 ]
+      tools/ninja: [ 1 ]
+      tools/ninja-build: [ 1 ]
+      tools/ninja-build/ninja: [ 1 ]
+      tools/nuvoton: [ 2, 3 ]
+      tools/nuvoton/cmsis: [ 2 ]
+      tools/nuvoton/cmsis-packs: [ 2 ]
+      tools/nuvoton/openocd: [ 3 ]
   SemverKey/version:
     keys:
-      1.2.22: [ 2 ]
-      1.3.12: [ 1 ]
+      1.2.22: [ 3 ]
+      1.3.12: [ 2 ]
+      1.11.1: [ 1 ]
       6.3.1-2017q1: [ 0 ]
   StringKey/summary:
     keys:
-      Free and open on-chip debugging: [ 2 ]
+      Free and open on-chip debugging: [ 3 ]
       GCC compiler for ARM CPUs.: [ 0 ]
     words:
       ARM: [ 0 ]
       CPUs: [ 0 ]
       CPUs.: [ 0 ]
-      Free: [ 2 ]
+      Free: [ 3 ]
       GCC: [ 0 ]
-      and: [ 2 ]
-      chip: [ 2 ]
+      and: [ 3 ]
+      chip: [ 3 ]
       compiler: [ 0 ]
-      debugging: [ 2 ]
+      debugging: [ 3 ]
       for: [ 0 ]
-      on: [ 2 ]
-      on-chip: [ 2 ]
-      open: [ 2 ]
+      on: [ 3 ]
+      on-chip: [ 3 ]
+      open: [ 3 ]
